02-kubernetes/stack_ecommerce/k8s/07-frontend/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-service
  namespace: ecommerce
  labels:
    app: frontend
    env: lab
spec:
  selector:
    app:  frontend
  type:  ClusterIP
  ports:
  - name:  http-frontend
    port:  8080
    targetPort:  8080
