02-kubernetes/stack_ecommerce/k8s/07-frontend/frontend-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-netpol
  labels:
    app: frontend
    env: lab
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Egress
  egress:
    #Backend rule
    - to:
      - podSelector:
          matchLabels:
            app: backend
      ports:
      - protocol: TCP
        port: 3000

    #DNS rule
    - ports: 
      - protocol: TCP
        port: 53
      - protocol: UDP
        port: 53
